--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '2.0.6'*/
 
 
-    implementation 'pdfbox:pdfbox:0.7.3'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.27'
 
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
