--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.5'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'idea'
 }
 
 group 'org.example'
@@ -25,6 +26,10 @@ dependencies {
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
 
+}
+idea {
+    module
+            { downloadJavadoc = true }
 }
 
 test {
