--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.5'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'idea'
 }
 
 group 'org.example'
@@ -12,25 +11,30 @@ repositories {
     mavenCentral()
     google()
 }
-
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 dependencies {
-  /*  implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.6'
-    implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '2.0.6'*/
-
-
-    implementation 'org.apache.pdfbox:pdfbox:2.0.27'
 
     implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation 'org.apache.pdfbox:pdfbox:2.0.27'
+    runtimeOnly 'com.h2database:h2'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
 
+
 }
-idea {
-    module
-            { downloadJavadoc = true }
-}
+
 
 test {
     useJUnitPlatform()
