--- a/build.gradle
+++ b/build.gradle
@@ -20,20 +20,25 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 
     implementation 'org.apache.pdfbox:pdfbox:2.0.27'
     runtimeOnly 'com.h2database:h2'
+
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
+    testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
+    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
 
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
 
+    testImplementation 'org.springframework:spring-test:6.0.7'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 
