postegreSQL integration + working on WOS create

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.output.ansi.enabled=ALWAYS
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/rail
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=niewiem
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
 logging.level.root=INFO
 logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.pattern.console=%d{yyyy-MMM-dd HH:mm:ss.SSS} [%thread] %highlight(%-5level) %cyan(%logger{15}) - %msg %n
-
-
-
