--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.postgresql:postgresql:42.6.0'
     implementation 'org.flywaydb:flyway-core:9.17.0'
+    implementation("org.jsoup:jsoup:1.16.1")
 
 
     implementation 'org.apache.pdfbox:pdfbox:2.0.27'
@@ -41,6 +42,7 @@ dependencies {
     testImplementation 'org.springframework:spring-test:6.0.7'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 
