--- a/build.gradle
+++ b/build.gradle
@@ -20,16 +20,17 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     implementation 'org.postgresql:postgresql:42.6.0'
-    implementation 'org.flywaydb:flyway-core:9.17.0'
+    implementation 'org.flywaydb:flyway-core'
     implementation("org.jsoup:jsoup:1.16.1")
 
 
     implementation 'org.apache.pdfbox:pdfbox:2.0.27'
-    runtimeOnly 'com.h2database:h2'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
@@ -40,7 +41,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
 
     testImplementation 'org.springframework:spring-test:6.0.7'
-
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
