--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.5'
     id 'io.spring.dependency-management' version '1.1.0'
+    id "org.openapi.generator" version "6.5.0"
+
 }
 
 group 'org.example'
@@ -20,17 +22,28 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     implementation 'org.postgresql:postgresql:42.6.0'
     implementation 'org.flywaydb:flyway-core'
-    implementation("org.jsoup:jsoup:1.16.1")
-
+    implementation 'org.jsoup:jsoup:1.16.1'
 
     implementation 'org.apache.pdfbox:pdfbox:2.0.27'
+
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'io.swagger:swagger-annotations:1.6.11'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
@@ -45,7 +58,31 @@ dependencies {
 
 }
 
+openApiGenerate {
+    generatorName = "java"
+    library = "webclient"
+    configOptions = [
+            serializableModel   : "false",
+            dateLibrary         : "java8",
+            serializationLibrary: "jackson"
+    ]
+    outputDir = "$buildDir/generated-sources/openapi".toString()
+    inputSpec = "$rootDir/src/main/resources/contracts/osm6.yaml".toString()
+    apiPackage = "org.pl.deenes.osm.infrastructure"
+    modelPackage = "org.pl.deenes.osm.model"
+}
+sourceSets {
+    main {
+        java.srcDirs += "$buildDir/generated-sources/openapi/src/main/java"
+    }
+}
+compileJava.dependsOn tasks.openApiGenerate
+
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
+apply plugin: 'org.openapi.generator'
