--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,9 @@
+api:
+  osm:
+    url: https://api.openstreetmap.org/
+
 server:
-  port: 8190
+  port: 8080
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
