--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,20 @@ api:
 
 server:
   port: 8080
+logging:
+  level:
+    org:
+      hibernate:
+        orm:
+          jdbc:
+            bind: trace
+        stat: debug
+        cache: debug
+        SQL: debug
+        type:
+          descriptor:
+            sql: trace
+    sql: debug
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
@@ -17,12 +31,16 @@ spring:
       minimumIdle: 10
       maximumPoolSize: 20
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        show_sql: true
+        use_sql_comments: true
 mvc:
   hiddenmethod:
     filter:
       enabled: true
+
